# paypal-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: rust-clippy.yml  rust.yml
examples/: invoice.rs
src/: client.rs  common.rs  countries.rs  endpoint.rs  errors.rs  invoice.rs  lib.rs  orders.rs  tests.rs
src/api/: invoice.rs  mod.rs  orders.rs  payments.rs
src/data/: common.rs  invoice.rs  mod.rs  orders.rs  payment.rs
tests/: auth_tests.rs  orders_tests.rs
tests/resources/: create_order_response.json  oauth_token.json
