[package]
name = "paypal-rs"
version = "0.2.4"
authors = ["Edgar <git@edgarluque.com>"]
description = "A library that wraps the paypal api asynchronously."
repository = "https://github.com/edg-l/paypal-rs/"
license = "MIT OR Apache-2.0"
keywords = ["paypal", "paypal-api"]
categories = ["api-bindings", "web-programming::http-client"]
documentation = "https://docs.rs/paypal-rs"
readme = "README.md"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
jsonwebtoken = "8.2.0"
base64 = "0.21.0"
log = "0.4.17"
bytes = "1.3.0"
derive_builder = "0.12.0"
serde_qs = "0.11.0"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.6"
color-eyre = "0.6.2"
wiremock = "0.5.16"

[features]
default = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
