[package]
name = "paypal-rs"
version = "0.2.5"
authors = ["Edgar <git@edgarluque.com>"]
description = "A library that wraps the paypal api asynchronously."
repository = "https://github.com/edg-l/paypal-rs/"
license = "MIT OR Apache-2.0"
keywords = ["paypal", "paypal-api"]
categories = ["api-bindings", "web-programming::http-client"]
documentation = "https://docs.rs/paypal-rs"
readme = "README.md"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
jsonwebtoken = "8.2.0"
base64 = "0.21.0"
log = "0.4.17"
bytes = "1.4.0"
derive_builder = "0.12.0"
serde_qs = "0.12.0"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.6"
color-eyre = "0.6.2"
wiremock = "0.5.17"

[features]
default = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
